--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "owl.carousel": "^2.3.4"
+        "owl.carousel": "^2.3.4",
+        "sweetalert2": "^11.14.5"
     }
 }
