--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "owl.carousel": "^2.3.4",
+        "sweetalert": "^2.1.2",
         "sweetalert2": "^11.14.5"
     }
 }
