--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "owl.carousel": "^2.3.4",
         "sweetalert": "^2.1.2",
-        "sweetalert2": "^11.14.5"
+        "sweetalert2": "^11.14.5",
+        "three": "^0.172.0"
     }
 }
