--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "bootstrap4": "^0.0.1-security",
+        "bootstrap5": "^1.1.9",
         "owl.carousel": "^2.3.4",
         "sweetalert": "^2.1.2",
         "sweetalert2": "^11.14.5"
